--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -3,10 +3,10 @@
         <header id="header">
         {% if site.aboutPage %}
             <a href="{{ site.baseurl }}about">
-                <img id="avatar" class="2x" src="http://pbs.twimg.com/profile_images/638744380183052288/tczoTpO2.jpg"/>
+                <img id="avatar" class="2x" src="{{ site.baseurl }}assets/images/avatar.png"/>
             </a>
         {% else %}
-            <img id="avatar" class="2x" src="http://pbs.twimg.com/profile_images/638744380183052288/tczoTpO2.jpg"/>
+            <img id="avatar" class="2x" src="{{ site.baseurl }}assets/images/avatar.png"/>
         {% endif %}
             <h1>{{ site.author }}</h1>
             <h2>{{ site.description }}</h2>
